@@ -1,5 +1,10 @@
 2003-11-15  Bruno Haible  <bruno@clisp.org>
 
+	* Makefile.am (EXTRA_DIST): Remove xg-test1.ok.po, add xg-c-1.ok.po.
+	(xg-c-1.ok.po): Renamed from xg-test1.ok.po.
+
+2003-11-15  Bruno Haible  <bruno@clisp.org>
+
 	* xgettext-7: Fix typo in tmpfiles.
 
 2003-11-07  Bruno Haible  <bruno@clisp.org>
